# HW_Django_30.1

./: pyproject.toml
materials/: models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
materials/fixtures/: courses_and_lessons.json
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py
myproject/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/fixtures/: payments.json
users/management/commands/: create_groups.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_managers.py  0004_remove_payment_pay_date_payment_date_and_more.py
